--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,13 +17,15 @@
         <nav>
             <a class="link" href="/">Home</a>
             <a class="link" href="/dashboard">Dashboard</a>
-            <button id="logout-btn" class="btn-no-style">Logout</button>
+            <a class="link" href="/login">Login</a>
+            {{!-- <button id="logout-btn" class="btn-no-style">Logout</button> --}}
         </nav>
     </header>
 
-        
-    {{{ body }}}
-        
+    <main>        
+        {{{ body }}}
+    </main>    
+
 </body>
 
 </html>
