--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,23 +9,30 @@
 </head>
 
 <body>
+    <div class="wrapper"></div>
+        <header>
+            <h1>
+                <a href="/">Reel Tech Blog</a>
+            </h1>
+            <nav>
+                <a class="link" href="/">Home</a>
+                {{#if loggedIn}}
+                <a class="link" href="/dashboard">Dashboard</a>
+                <button id="logout" class="btn-no-style">logout</button>
+                {{else}}
+                <a class="link" href="/login">Login</a>
+                {{/if}}
+            </nav>
+        </header>
 
-    <header>
-        <h1>
-            <a href="/">Reel Tech Blog</a>
-        </h1>
-        <nav>
-            <a class="link" href="/">Home</a>
-            <a class="link" href="/dashboard">Dashboard</a>
-            <a class="link" href="/login">Login</a>
-            {{!-- <button id="logout-btn" class="btn-no-style">Logout</button> --}}
-        </nav>
-    </header>
+        <main>        
+            {{{ body }}}
+        </main>
+    </div>    
 
-    <main>        
-        {{{ body }}}
-    </main>    
-
+    {{#if loggedIn}}
+    <script src="/javascript/logout.js"></script>
+    {{/if}}
 </body>
 
 </html>
