--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,12 +15,12 @@
                 <a href="/">Reel Tech Blog</a>
             </h1>
             <nav>
-                <a class="link" href="/">Home</a>
+                <a href="/">Home</a>
                 {{#if loggedIn}}
-                <a class="link" href="/dashboard">Dashboard</a>
+                <a href="/dashboard">Dashboard</a>
                 <button id="logout" class="btn-no-style">logout</button>
                 {{else}}
-                <a class="link" href="/login">Login</a>
+                <a href="/login">Login</a>
                 {{/if}}
             </nav>
         </header>
