--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,8 +7,8 @@
             <input type="text" id="post-title" name="post-title" />
         </div>
         <div>
-            <label for="post-url">Message</label>
-            <textarea id="post-content" name="post-content" ></textarea>
+            <label for="post-body">Message</label>
+            <textarea id="post-body" name="post-body" ></textarea>
         </div>
         <button type="submit" class="btn">Create</button>
     </form>
